# smt-switch

./: CMakeLists.txt  configure.sh
contrib/: setup-yices2.sh
src/: term_translator.cpp
tests/msat/: CMakeLists.txt  msat-array-models.cpp  msat-tests.cpp  msat-transfer.cpp  polynomial.cpp
tests/yices2/: CMakeLists.txt  yices2-array-models.cpp  yices2-arrays-2.cpp  yices2-arrays.cpp  yices2-const-arrays.cpp  yices2-data-structures.cpp  yices2-ext-ops.cpp  yices2-incremental.cpp  yices2-indexed-op-tests.cpp  yices2-int-arithmetic.cpp  yices2-ite-test.cpp  yices2-neg-numbers.cpp  yices2-polynomial.cpp  yices2-substitute.cpp  yices2-substitute2.cpp  yices2-tests.cpp  yices2-transfer.cpp  yices2-traversal.cpp
yices2/: CMakeLists.txt  notes
yices2/include/: yices2_extensions.h  yices2_solver.h  yices2_sort.h  yices2_term.h
yices2/src/: yices2_extensions.cpp  yices2_factory.cpp  yices2_solver.cpp  yices2_sort.cpp  yices2_term.cpp
